[package]
name = "rtxlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
crc = "3"
serialport = "4"
slip = { version = "0", package = "simple_slip" }
text-colorizer = "1"
thread-control = "0"
ymodem = "0"
